add jvmti module

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>logging</module>
         <module>example</module>
         <module>extension</module>
+        <module>jvmti</module>
         <module>test</module>
         <module>dependencies</module>
     </modules>
