--- a/extension/extension-3.x/extension-notify-email-3.x/pom.xml
+++ b/extension/extension-3.x/extension-notify-email-3.x/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
