--- a/adapter/adapter-webserver/pom.xml
+++ b/adapter/adapter-webserver/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <optional>true</optional>
