--- a/test/test-core/pom.xml
+++ b/test/test-core/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>dynamic-tp-adapter-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
         </dependency>
