alibaba dubbo support springmvc

--- a/example/example-adapter/example-adapter-dubbo/example-adapter-alibaba-dubbo/pom.xml
+++ b/example/example-adapter/example-adapter-dubbo/example-adapter-alibaba-dubbo/pom.xml
@@ -17,5 +17,16 @@
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-reload4j</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
