--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -25,7 +25,8 @@
         <sofa-rpc.version>5.9.1</sofa-rpc.version>
         <brpc.version>2022.2.0</brpc.version>
         <apache-dubbo.version>3.0.7</apache-dubbo.version>
-        <alibaba-dubbo.version>2.0.0</alibaba-dubbo.version>
+        <alibaba-dubbo.version>2.6.0</alibaba-dubbo.version>
+        <alibaba-dubbo-starter.version>2.0.0</alibaba-dubbo-starter.version>
         <grpc.version>2.13.1.RELEASE</grpc.version>
         <hystrix.version>1.5.18</hystrix.version>
         <motan.version>1.2.0</motan.version>
@@ -80,13 +81,13 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.6.0</version>
+                <version>${alibaba-dubbo.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.alibaba.spring.boot</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${alibaba-dubbo.version}</version>
+                <version>${alibaba-dubbo-starter.version}</version>
             </dependency>
 
             <dependency>
