--- a/starter/starter-extension/pom.xml
+++ b/starter/starter-extension/pom.xml
@@ -17,4 +17,10 @@
         <module>starter-extension-notify-email</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
