--- a/adapter/adapter-rabbitmq/pom.xml
+++ b/adapter/adapter-rabbitmq/pom.xml
@@ -17,8 +17,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
             <optional>true</optional>
         </dependency>
 
