--- a/adapter/adapter-rocketmq/pom.xml
+++ b/adapter/adapter-rocketmq/pom.xml
@@ -17,14 +17,13 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
-            <optional>true</optional>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-jvmti</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <artifactId>rocketmq-client</artifactId>
             <optional>true</optional>
         </dependency>
         
