--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -49,6 +49,7 @@
         <gson.version>2.8.9</gson.version>
         <fastjson.version>1.2.83</fastjson.version>
         <opentelemetry.version>1.25.0</opentelemetry.version>
+        <native-lib-loader.version>2.0.2</native-lib-loader.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -57,6 +58,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.scijava</groupId>
+                <artifactId>native-lib-loader</artifactId>
+                <version>${native-lib-loader.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-api</artifactId>
