--- a/jvmti/pom.xml
+++ b/jvmti/pom.xml
@@ -124,7 +124,7 @@
                         <executions>
                             <execution>
                                 <id>javah</id>
-                                <phase>compile</phase>
+                                <phase>initialize</phase>
                                 <goals>
                                     <goal>javah</goal>
                                     <goal>initialize</goal>
@@ -193,7 +193,7 @@
                 <executions>
                     <execution>
                         <id>javah</id>
-                        <phase>compile</phase>
+                        <phase>initialize</phase>
                         <goals>
                             <goal>javah</goal>
                             <goal>initialize</goal>
@@ -216,17 +216,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scijava</groupId>
             <artifactId>native-lib-loader</artifactId>
-            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
