remove adapter-webserver

--- a/starter/starter-adapter/starter-adapter-webserver/pom.xml
+++ b/starter/starter-adapter/starter-adapter-webserver/pom.xml
@@ -21,5 +21,23 @@
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-adapter-webserver</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
