feature：支持扩展，目前先支持DtpExecutor和ScheduledDtpExecutor的扩展

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -63,6 +63,12 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-http</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
