--- a/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
+++ b/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
@@ -6,7 +6,7 @@ spring:
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
       collectorTypes: micrometer,logging,endpoint     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
-      logPath: D:\\logs           # 监控日志数据路径，默认 ${user.home}/logs
+      logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs
       monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
       nacos:                        # nacos配置，不配置有默认值（规则name-dev.yml这样），cloud应用不需要配置
         dataId: dynamic-tp-nacos-demo-dtp-dev.yml
