feature：支持扩展，目前先支持DtpExecutor和ScheduledDtpExecutor的扩展

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -26,6 +26,7 @@
         <module>example-adapter</module>
         <module>example-polaris-cloud</module>
         <module>example-huawei-cloud</module>
+        <module>example-extension</module>
     </modules>
 
     <build>
