--- a/example/example-extension/pom.xml
+++ b/example/example-extension/pom.xml
@@ -9,7 +9,7 @@
         <version>1.1.3</version>
     </parent>
 
-    <artifactId>example-extension</artifactId>
+    <artifactId>dynamic-tp-example-extension</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
