--- a/example/example-nacos/pom.xml
+++ b/example/example-nacos/pom.xml
@@ -54,12 +54,12 @@
         <dependency>
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-nacos</artifactId>
-            <version>${revision}</version>
+            <version>1.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
-            <version>${revision}</version>
+            <version>1.1.3</version>
         </dependency>
 
 <!--        <dependency>-->
