--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -53,7 +53,7 @@
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-flatten.version>1.3.0</maven-flatten.version>
-        <ttl.version>2.12.6</ttl.version>
+        <ttl.version>2.14.3</ttl.version>
         <equator.version>1.0.4</equator.version>
     </properties>
 
@@ -427,6 +427,12 @@
             <dependency>
                 <groupId>org.dromara.dynamictp</groupId>
                 <artifactId>dynamic-tp-extension-skywalking</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dromara.dynamictp</groupId>
+                <artifactId>dynamic-tp-extension-ttl</artifactId>
                 <version>${revision}</version>
             </dependency>
 
