--- a/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
+++ b/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
@@ -50,7 +50,7 @@ spring:
           maximumPoolSize: 400
           keepAliveTime: 60
       executors:                                   # 动态线程池配置，都有默认值，采用默认值的可以不配置该项，减少配置量
-        - threadPoolName: dtpExecutor1
+        - threadPoolName: dtpExecutorExample1
           executorType: common                     # 线程池类型common、eager：适用于io密集型
           corePoolSize: 6
           maximumPoolSize: 8
@@ -67,10 +67,10 @@ spring:
           queueTimeout: 100                              # 任务在队列等待超时阈值，目前只做告警用，单位（ms）
           taskWrapperNames: ["ttl"]                          # 任务包装器名称，集成TaskWrapper接口
           notifyItems:                     # 报警项，不配置自动会按默认值配置（变更通知、容量报警、活性报警、拒绝报警、任务超时报警）
-            - type: capacity               # 报警项类型，查看源码 NotifyTypeEnum枚举类
+            - type: capacity               # 报警项类型，查看源码 NotifyItemEnum枚举类
               enabled: true
               threshold: 80                # 报警阈值
-              platforms: [ding,wechat]     # 可选配置，不配置默认拿上层platforms配置的所以平台
+              platforms: [ding,wechat]     # 可选配置，不配置默认拿上层platforms配置的所有平台
               interval: 120                # 报警间隔（单位：s）
             - type: change
               enabled: true
