--- a/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       monitorInterval: 5
       platforms:                    # 通知报警平台配置
         - platform: wechat
-          urlKey: 3a7500-1287-4bd-a798-c5c3d8b69c  # 替换
+          urlKey:  32d7bf40-1353-4859              # 替换
           receivers: test1,test2                   # 接受人企微名称
         - platform: ding
           urlKey: f80dad441fcd655438f4a08dcd6a     # 替换
@@ -29,9 +29,17 @@ spring:
           receivers: 123456@qq.com,789789@qq.com   # 收件人
       okhttp3Tp:                                   # okhttp3 线程池配置
         - threadPoolName: okHttpClientTp
-          corePoolSize: 100
-          maximumPoolSize: 200
+          corePoolSize: 1
+          maximumPoolSize: 1
           keepAliveTime: 60
+          runTimeout: 20
+          queueTimeout: 10
+      tomcatTp:                                    # tomcat webserver 线程池配置
+        corePoolSize: 1
+        maximumPoolSize: 1
+        keepAliveTime: 60
+        runTimeout: 20
+        queueTimeout: 10
 
   # email notify configuration
   mail:
