--- a/example/example-adapter/example-adapter-webserver/pom.xml
+++ b/example/example-adapter/example-adapter-webserver/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>dynamic-tp-all</artifactId>
-        <groupId>org.dromara.dynamictp</groupId>
-        <version>1.1.3</version>
-        <relativePath>../../../pom.xml</relativePath>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>example-adapter-webserver</artifactId>
+    <parent>
+        <artifactId>dynamic-tp-example-adapter</artifactId>
+        <groupId>org.dromara.dynamictp</groupId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>dynamic-tp-example-adapter-webserver</artifactId>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
