feat:增加tps和任务平均耗时监控

--- a/example/example-adapter/example-adapter-webserver/pom.xml
+++ b/example/example-adapter/example-adapter-webserver/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>dynamic-tp-extension-skywalking</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
