--- a/example/example-polaris-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-polaris-cloud/src/main/resources/bootstrap.yml
@@ -18,3 +18,13 @@ spring:
         groups:
           - name: ${spring.application.name} # group name
             files: [ "config/dynamic-tp.yml" ]
+
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'   # 测试使用，线上不要用*，按需开启
