--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -55,6 +55,7 @@
         <maven-flatten.version>1.3.0</maven-flatten.version>
         <ttl.version>2.14.3</ttl.version>
         <equator.version>1.0.4</equator.version>
+        <dropwizard-metrics.version>4.2.20</dropwizard-metrics.version>
     </properties>
 
     <dependencyManagement>
@@ -308,6 +309,13 @@
                 <groupId>com.github.dadiyang</groupId>
                 <artifactId>equator</artifactId>
                 <version>${equator.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core -->
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-core</artifactId>
+                <version>${dropwizard-metrics.version}</version>
             </dependency>
 
             <dependency>
