--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <modules>
+        <module>example-adapter-juc</module>
         <module>example-adapter-okhttp3</module>
         <module>example-adapter-dubbo</module>
         <module>example-adapter-grpc</module>
