--- a/extension/extension-skywalking/pom.xml
+++ b/extension/extension-skywalking/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-jvmti-runtime</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
