--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <revision>1.1.6-3.x-alpha</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
 
@@ -24,7 +25,7 @@
 
         <hutool.version>5.8.22</hutool.version>
         <guava.version>31.1-jre</guava.version>
-        <jackson.version>2.15.1</jackson.version>
+        <jackson.version>2.13.4</jackson.version>
         <gson.version>2.8.9</gson.version>
         <fastjson.version>1.2.83</fastjson.version>
         <ttl.version>2.14.3</ttl.version>
@@ -59,6 +60,7 @@
         <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
 
         <dropwizard-metrics.version>4.2.20</dropwizard-metrics.version>
         <jakarta-mail.version>2.1.0</jakarta-mail.version>
@@ -667,7 +669,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.13</version>
+                        <version>${nexus-staging-maven-plugin.version}</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
