1、去掉DtpProperties中nacos对象的配置 2、引入 <dependency>     <groupId>com.alibaba.boot</groupId>      <artifactId>nacos-config-spring-boot-actuator</artifactId> </dependency> 依赖 重写 NacosRefresher 实现SmartApplicationListener接口，监听NacosConfigEvent事件，当nacos服务器中配置发生变更时回接受到此事件，调用AbstractRefresher类中的refresh即可

--- a/starter/starter-configcenter/starter-nacos/pom.xml
+++ b/starter/starter-configcenter/starter-nacos/pom.xml
@@ -12,9 +12,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alibaba.nacos</groupId>
-            <artifactId>nacos-api</artifactId>
-            <optional>true</optional>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
