--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -48,6 +48,7 @@
 
         <apollo.version>1.5.0</apollo.version>
         <nacos-api.version>2.0.4</nacos-api.version>
+        <spring-boot-nacos.version>0.2.12</spring-boot-nacos.version>
         <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
         <spring-cloud-tencent.version>1.12.4-2021.0.8</spring-cloud-tencent.version>
         <spring-cloud-huawei.version>1.10.11-2021.0.x</spring-cloud-huawei.version>
@@ -272,6 +273,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-config-spring-boot-starter</artifactId>
+                <version>${spring-boot-nacos.version}</version>
             </dependency>
 
             <dependency>
