--- a/example/example-nacos/pom.xml
+++ b/example/example-nacos/pom.xml
@@ -34,7 +34,12 @@
         <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-config-spring-boot-starter</artifactId>
-            <version>0.2.7</version>
+            <version>0.2.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>1.4.6</version>
         </dependency>
         <dependency>
             <groupId>org.dromara.dynamictp</groupId>
