--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <url>https://github.com/yanhom1314/dynamic-tp</url>
 
     <properties>
-        <revision>1.1.5-1</revision>
+        <revision>1.1.5</revision>
         <java.version>1.8</java.version>
         <spring-boot.version>2.7.16</spring-boot.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
