--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
 
     <properties>
         <revision>1.1.5</revision>
-        <java.version>1.8</java.version>
-        <spring-boot.version>2.7.16</spring-boot.version>
+
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+
+        <spring-boot.version>2.7.18</spring-boot.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
 
         <guava.version>31.1-jre</guava.version>
@@ -23,7 +26,7 @@
 
         <maven-flatten.version>1.3.0</maven-flatten.version>
         <maven-checkstyle-plugin.verion>3.1.0</maven-checkstyle-plugin.verion>
-        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -191,8 +194,8 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
             <plugin>
