fix: the memory leak problem caused by new ConfigPropertySource method

--- a/example/example-apollo/src/main/resources/application.yml
+++ b/example/example-apollo/src/main/resources/application.yml
@@ -23,7 +23,7 @@ logging:
 apollo:
   bootstrap:
     enabled: true
-    namespaces: dynamic-tp-apollo-demo-dtp.yml
+    namespaces: dynamic-tp-apollo-demo-dtp.yml, application.properties
   meta: http://localhost:8080
   config-service: http://localhost:8080
 app:
